--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,5 +49,8 @@ bind-key r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf."
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+# Renumber remaining windows when one is closed.
+set-option -g renumber-windows on
+
 set-option -g default-command 'reattach-to-user-namespace -l fish'
 #set-option -g default-command 'reattach-to-user-namespace -l zsh'
