tmux: store LOTS more history.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,9 @@ bind-key x command-prompt
 
 bind-key l lock-server
 
+# I have lots of memory, and I need more history!
+set-option -g history-limit 20000
+
 #set-option -g status off
 set-option -g status-bg default
 set-option -g status-fg default
