--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,8 @@
-font_size 12.0
-font_family Fira Code
+font_size 14.0
+font_family Meslo LG M for Powerline
 
 macos_titlebar_color background
 
 include base16-kitty/colors/base16-classic-light-256.conf
+
+cursor #f4bf75
