tmux: send escape immediately.
This fixes the long delay I was seeing when using vim in tmux.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 set-option -g prefix C-x
 unbind-key C-b
 bind-key C-x send-prefix
+set-option -s escape-time 0
 
 set-window-option -g mode-keys emacs
 set-option -g status-keys emacs
