--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,8 @@ bind-key - last-window
 
 bind-key x command-prompt
 
+bind-key -n PageUp copy-mode \; send -X page-up
+
 bind-key l lock-server
 
 # I have lots of memory, and I need more history!
