tmux: use vi-style bindings in copy-mode.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,8 +3,31 @@ unbind-key C-b
 bind-key C-x send-prefix
 set-option -s escape-time 0
 
-set-window-option -g mode-keys emacs
+# Use emacs-style keys in the command prompt.
 set-option -g status-keys emacs
+
+# Use vi-style keys in copy mode.
+set-window-option -g mode-keys vi
+unbind-key -Tcopy-mode-vi v # rectangle-toggle (??)
+bind-key -Tcopy-mode-vi v send-keys -X begin-selection
+bind-key -Tcopy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -Tcopy-mode-vi | send-keys -X copy-pipe
+
+# Colemak movement keys (and related remappings).
+unbind-key -Tcopy-mode-vi k # cursor-up
+bind-key -Tcopy-mode-vi k send-keys -X search-again
+unbind-key -Tcopy-mode-vi n # search-again
+unbind-key -Tcopy-mode-vi e # end of word
+bind-key -Tcopy-mode-vi h send-keys -X cursor-left
+bind-key -Tcopy-mode-vi n send-keys -X cursor-down
+bind-key -Tcopy-mode-vi e send-keys -X cursor-up
+bind-key -Tcopy-mode-vi i send-keys -X cursor-right
+
+bind h select-pane -L
+bind n select-pane -D
+bind e select-pane -U
+bind i select-pane -R
+
 
 bind-key bspace previous-window
 bind-key ' ' next-window
@@ -30,11 +53,6 @@ set-option -g default-terminal "screen"
 #set-option -g mouse-select-window on
 
 #set-window-option -g mode-mouse on
-
-bind h select-pane -L
-bind n select-pane -D
-bind e select-pane -U
-bind i select-pane -R
 
 bind-key r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf."
 
