Terminal color changes.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,10 @@
 font_size 14.0
-font_family Meslo LG M Bold
+font_family Meslo LG M
 
 macos_titlebar_color background
 
-include base16-kitty/colors/base16-harmonic-dark-256.conf
+#include base16-kitty/colors/base16-harmonic-dark-256.conf
+include base16-kitty/colors/base16-classic-light-256.conf
 
 # cursor color for base16-classic
-# cursor #f4bf75
+cursor #f4bf75
