tmux: hack in a check for whether reattach-to-user-namespace is needed.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,5 +65,10 @@ set-window-option -g pane-base-index 1
 # Renumber remaining windows when one is closed.
 set-option -g renumber-windows on
 
+# This is a hacky way of checking if we're running on macOS.
+# Otherwise, I expect SHELL to be /usr/bin/fish.
+#
+# Using SHELL here because it makes its way to tmux's environment.
+%if #{==:#{SHELL},/usr/local/bin/fish}
 set-option -g default-command 'reattach-to-user-namespace -l fish'
-#set-option -g default-command 'reattach-to-user-namespace -l zsh'
+%endif
