--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,7 +48,7 @@ set-option -g status-left-length 20
 
 set-option -g set-titles on
 
-set-option -g default-terminal "screen"
+set-option -g default-terminal "screen-256color"
 #set-option -g mouse-select-pane on
 #set-option -g mouse-select-window on
 
