--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -45,6 +45,8 @@ set-option -g status-bg default
 set-option -g status-fg default
 set-option -g status-left "(#[fg=blue]#S#[default])"
 set-option -g status-left-length 20
+set-option -g status-right "%H:%M"
+set-option -g status-justify centre
 
 set-option -g set-titles on
 
