--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,10 +1,12 @@
 font_size 14.0
 font_family Meslo LG M Bold
 
-macos_titlebar_color background
+allow_remote_control socket-only
+listen_on unix:/tmp/kitty-socket
 
-#include base16-kitty/colors/base16-harmonic-dark-256.conf
-include base16-kitty/colors/base16-summerfruit-dark-256.conf
+macos_titlebar_color background
 
 # cursor color for base16-classic
 #cursor #f4bf75
+include /home/awl/.local/share/base16/kitty/colors/base16-dracula-256.conf
+cursor #ea51b2
