--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 font_size 14.0
-font_family Meslo LG M Bold
+font_family Iosevka
 
 allow_remote_control socket-only
 listen_on unix:/tmp/kitty-socket
