Don't keep kitty around after the shell dies.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,8 @@ font_family Iosevka
 allow_remote_control socket-only
 listen_on unix:/tmp/kitty-socket
 
+close_on_child_death yes
+
 macos_titlebar_color background
 
 # cursor color for base16-classic
