polybar: minor coloring tweaks.

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -38,9 +38,11 @@ bright-white = ${xrdb:color15:#fff}
 background = #00222200
 background-alt = ${colors.bright-black}
 foreground = ${colors.bright-white}
+;foreground = ${colors.bright-black}
 ;foreground-alt = ${xrdb:color17:#ccc}
-foreground-alt = ${colors.bright-black}
-foreground-minimal = ${xrdb:color19:#888}
+;foreground-alt = ${colors.bright-black}
+foreground-alt = ${colors.bright-white}
+foreground-minimal = ${xrdb:color20:#888}
 foreground-minimal-alt = ${xrdb:color21:#999}
 primary = ${colors.red}
 secondary = ${colors.green}
