--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,5 +6,9 @@
 
 config_version: 2
 settings:
+  content.geolocation:
+    https://www.homedepot.com: false
+  content.media_capture:
+    https://whereby.com: true
   content.notifications:
     https://www.reddit.com: false
