--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -101,7 +101,7 @@ font:
     family: Iosevka Term Slab
 
     # The `style` can be specified to pick a specific face.
-    style: Light #Medium
+    style: Medium # Light for light themes
 
   # Bold font face
   bold:
@@ -112,7 +112,7 @@ font:
     #family: monospace
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Bold # Regular for light themes
 
   # Italic font face
   italic:
@@ -123,7 +123,7 @@ font:
     #family: monospace
 
     # The `style` can be specified to pick a specific face.
-    style: Italic
+    style: Regular Italic
 
   # Bold italic font face
   bold_italic:
@@ -134,10 +134,10 @@ font:
     #family: monospace
 
     # The `style` can be specified to pick a specific face.
-    style: Regular Italic
+    style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 12.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
