tmux: update status bar config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,8 +41,8 @@ bind-key l lock-server
 set-option -g history-limit 20000
 
 #set-option -g status off
-set-option -g status-bg default
-set-option -g status-fg default
+set-option -g status-style bg=default
+set-option -g status-style fg=default
 set-option -g status-left "(#[fg=blue]#S#[default])"
 set-option -g status-left-length 20
 set-option -g status-right "%H:%M"
