--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,8 +48,8 @@ set-option -g status-left-length 20
 set-option -g status-right "%H:%M"
 set-option -g status-justify centre
 
-set-option -g window-status-format " #[fg=brightblack,dim]#I:#[default]#W "
-set-option -g window-status-current-format " #[fg=brightblack,dim]#I:#[default]#[underscore]#W#[default] "
+set-option -g window-status-format " #[fg=white,dim]#I:#[default]#W "
+set-option -g window-status-current-format " #[fg=white,dim]#I:#[default]#[underscore]#W#[default] "
 
 set-option -g set-titles on
 
