--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -55,7 +55,7 @@ glx-copy-from-front = false;
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = true;
+shadow = false;
 # The blur radius for shadows. (default 12)
 shadow-radius = 24;
 # The left offset for shadows. (default -15)
