git: trust exit codes from vim when using it as a difftool
This way, I can abort the difftool process with :cq.

--- a/.config/git/config
+++ b/.config/git/config
@@ -21,6 +21,7 @@
   cmd = ksdiff-wrapper git \"$LOCAL\" \"$REMOTE\"
 [difftool "nvim diff"]
   cmd = nvim -R -d \"$LOCAL\" \"$REMOTE\"
+  trustExitCode = true
 [difftool]
   prompt = false
 [diff]
