tmux: enable terminal events and add an override for Alacritty.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@ set-option -g prefix C-x
 unbind-key C-b
 bind-key C-x send-prefix
 set-option -s escape-time 0
+set-option -g focus-events on
+set-option -sa terminal-overrides ',alacritty:RGB'
 
 # Use emacs-style keys in the command prompt.
 set-option -g status-keys emacs
