Ignore a bunch more garbage.

--- a/.config/.gitignore
+++ b/.config/.gitignore
@@ -1,8 +1,35 @@
+/1Password
+/BraveSoftware
 /QtProject.conf
+/Slack
+/Thunar
+/Zeal
 /aurutils
+/chromium
+/configstore
+/dconf
+/docker
 /dolphin-emu
+/figma-linux
+/google-chrome*
+/irb
+/libreoffice
+/microsoft-edge-dev
 /mimeapps.list
 /mopidy
+/ncmpcpp/*.log
+/nextjs-nodejs
+/obs-studio
 /protonmail
 /pulse
 /rofi
+/systemd
+/vivaldi*
+/vlc
+/xfce4
+/zoomus.conf
+
+/.org.chromium.*
+
+# TODO: work needed
+/spotifyd/spotifyd.conf
