git: use `nvim -d` a bit better.
Removing `-R` and using `$MERGED` makes it possible to edit files inside
the diff (e.g., while doing a code review).

`trustExitCode` for some reason is set at the overall `difftool` level,
not the level of the specific tool, and it lets me do e.g. `:4cq` from
within vim to abort the whole difftool process.

--- a/.config/git/config
+++ b/.config/git/config
@@ -20,10 +20,10 @@
 [difftool "Kaleidoscope"]
   cmd = ksdiff-wrapper git \"$LOCAL\" \"$REMOTE\"
 [difftool "nvim diff"]
-  cmd = nvim -R -d \"$LOCAL\" \"$REMOTE\"
-  trustExitCode = true
+  cmd = nvim -d \"$LOCAL\" \"$MERGED\"
 [difftool]
   prompt = false
+  trustExitCode = true
 [diff]
   tool = nvim diff
 [init]
