--- a/.config/i3/config
+++ b/.config/i3/config
@@ -21,6 +21,9 @@ bindsym $mod+k exec $workspacechooser | xargs i3-msg -- workspace
 bindsym $mod+Shift+k exec $workspacechooser | xargs i3-msg -- move workspace
 bindsym $mod+Ctrl+k exec $workspacechooser | xargs i3-msg -- rename workspace to
 
+bindsym $hyper+p exec ~/bin/spotify-toggle.sh
+bindsym $hyper+m exec toggle-mic.sh
+
 # Colors
 set_from_resource $color0 i3wm.color0 #000000
 set_from_resource $color1 i3wm.color1 #000000
@@ -90,6 +93,10 @@ bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
 
+# move workspace
+bindsym $hyper+$left move workspace to output left
+bindsym $hyper+$right move workspace to output right
+
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
@@ -124,15 +131,15 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
+set $ws1 "1: comm"
+set $ws2 "2: dev"
+set $ws3 "3: app"
+set $ws4 "4: firefox"
+set $ws5 "5: sheet"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
-set $ws9 "9"
+set $ws9 "9: music"
 set $ws10 "10"
 
 # switch to workspace
@@ -198,8 +205,8 @@ for_window [class=".*"] border pixel 1
 # gaps inner 14
 # gaps outer 6
 
-smart_borders no_gaps
-hide_edge_borders smart_no_gaps
+smart_borders yes
+hide_edge_borders none
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -212,7 +219,7 @@ bar {
 
     # State             Border  BG      Text
     focused_workspace   $color7 $color12 $color0
-    active_workspace    $color7 $color8 $color0
+    active_workspace    $color7 $color8 $color7
     inactive_workspace  $color8 $color18 $color7
     urgent_workspace    $color9 $color9 $color0
     binding_mode        $color0 $color11 $color0
