elvish: more tweaks, fixes, and improvements.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,6 +65,10 @@ bind-key r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf."
 
 #set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
+# Allow programs to rename their windows.
+# Use e.g. `printf "\033kNEW_NAME_HERE\033\\"`.
+set-option -gw allow-rename on
+
 # Start numbering at 1.
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
