--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -6,7 +6,7 @@ format = "$username$hostname$battery$directory$git_branch$git_state$python$shell
 right_format = ''
 scan_timeout = 30
 command_timeout = 500
-# add_newline = true
+add_newline = false
 
 [battery]
 full_symbol = ' '
