--- a/.config/alacritty/local.yml.example
+++ b/.config/alacritty/local.yml.example
@@ -10,6 +10,8 @@ window:
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: true
 
+  opacity: 1.0
+
 # Font configuration
 font:
   normal:
@@ -32,9 +34,3 @@ font:
   offset:
     x: 0
     y: 4
-
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
