tmux: include all sessions in chooser, and sort by name.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,10 @@ bind n select-pane -D
 bind e select-pane -U
 bind i select-pane -R
 
+# Allow choosing session groups from the tree (-G),
+# and sort them by name (-O name).
+# Default is just choose-tree -s.
+bind-key s choose-tree -sGO name
 
 bind-key bspace previous-window
 bind-key ' ' next-window
