tmux: add a shortcut for updating the session path.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,8 @@ bind-key x command-prompt
 
 bind-key l lock-server
 
+bind-key . attach-session -t . -c "#{pane_current_path}"
+
 # I have lots of memory, and I need more history!
 set-option -g history-limit 20000
 
