--- a/.config/nvim/requirements.txt
+++ b/.config/nvim/requirements.txt
@@ -1,6 +1,6 @@
 astroid==2.9.2
 autopep8==1.6.0
-black==21.12b0
+black==22.3.0
 click==8.0.3
 flake8==4.0.1
 greenlet==1.1.2
@@ -11,6 +11,7 @@ mccabe==0.6.1
 msgpack==1.0.3
 mypy-extensions==0.4.3
 neovim==0.3.1
+nodeenv==1.6.0
 parso==0.8.3
 pathspec==0.9.0
 platformdirs==2.4.1
@@ -20,8 +21,10 @@ pydocstyle==6.1.1
 pyflakes==2.4.0
 pylint==2.12.2
 pynvim==0.4.3
+pyright==1.1.235
+python-lsp-black==1.2.0
 python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.3.3
+python-lsp-server==1.4.1
 rope==0.22.0
 snowballstemmer==2.2.0
 toml==0.10.2
