--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -35,7 +35,7 @@ hints:
     post_processing: true
     mouse:
       enabled: true
-      mods: None
+      mods: Control|Shift
     binding:
       key: H
       mods: Control|Shift
