sway: check in latest outputs config from work machine.

--- a/.config/sway/config.d/outputs.conf
+++ b/.config/sway/config.d/outputs.conf
@@ -1,15 +1,30 @@
 ### Output configuration
 #
-output "Unknown HP Z27 CN401600FP" {
+# output "HP Inc. HP Z27 CN401600FY" {
+#   # on left
+#   scale 1.25
+#   mode 3840x2160@60Hz
+#   pos 0 0
+# }
+
+# output "HP Inc. HP Z27 CN401600FP" {
+#   # on right
+#   scale 1.25
+#   mode 3840x2160@60Hz
+#   pos 3072 0
+# }
+
+output "HP Inc. HP Z27 CN401600FY" {
   # on left
-  scale 1.5
+  # scale 1.25
   mode 3840x2160@60Hz
   pos 0 0
 }
 
-output "Unknown HP Z27 CN401600FY" {
+output "HP Inc. HP Z27 CN401600FP" {
   # on right
-  scale 1.5
+  # scale 1.25
   mode 3840x2160@60Hz
-  pos 2560 0
+  # pos 3072 0
+  pos 3840 0
 }
