tmux: minor fixes.

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ unbind-key C-b
 bind-key C-x send-prefix
 set-option -s escape-time 0
 set-option -g focus-events on
-set-option -sa terminal-overrides ',alacritty:RGB'
+set-option -sa terminal-overrides ',alacritty:RGB,xterm-kitty:RGB'
 
 # Use emacs-style keys in the command prompt.
 set-option -g status-keys emacs
@@ -43,7 +43,8 @@ bind-key x command-prompt
 
 bind-key l lock-server
 
-bind-key . attach-session -t . -c "#{pane_current_path}"
+bind-key . attach-session -t . -c "#{pane_current_path}"\; \
+  display-message "session path set to #{pane_current_path}"
 
 # I have lots of memory, and I need more history!
 set-option -g history-limit 20000
@@ -61,7 +62,8 @@ set-option -g window-status-current-format " #[fg=white,dim]#I:#[default]#[under
 
 set-option -g set-titles on
 
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
+# set-option -g default-terminal "screen-256color"
 #set-option -g mouse-select-pane on
 #set-option -g mouse-select-window on
 
