tmux: you don't need to be a login shell.
Running a login shell on macOS results in the path helper being run,
which results in the system paths being moved to the beginning of $PATH,
which results in them being earlier than asdf's shims directory.  Since
asdf's shims directory is already in the $PATH from the *original*
login shell, asdf doesn't re-add it, and it stays in the wrong place.

--- a/tmux.conf
+++ b/tmux.conf
@@ -84,6 +84,18 @@ set-window-option -g pane-base-index 1
 # Renumber remaining windows when one is closed.
 set-option -g renumber-windows on
 
+# default-command is the command that is run in a new window.
+# default-shell is the shell that is used to run the default command.
+#
+# If these are empty, then tmux will start your default shell as a login
+# shell, which causes the system paths to be put at the front of PATH,
+# which wreaks havoc with asdf.
+#
+# This tells tmux to start a non-login dash shell and use that to find
+# fish and run it.
+set-option -g default-shell /bin/dash
+set-option -g default-command fish
+
 # This is a hacky way of checking if we're running on macOS.
 # Otherwise, I expect SHELL to be /usr/bin/fish.
 #
